fixed the style of popup and fix live btn prevent click too much

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,46 +141,32 @@ html, body {
    cursor: default;
 }
 
-#liveContainer,
-#geoContainer {
+#liveContainer, #geoContainer {
     position:absolute;
-<<<<<<< HEAD
     right:20px;
     bottom:20px;
 }
 #liveContainer{
-    left:20px;
-=======
     left:50px;
-    bottom:30px;
->>>>>>> 85fe4559d6471716d0e2fdf5d0fb04b6adb590fd
     width:80px;
 }
 #geoContainer{
-    right:20px;
+    right:50px;
     width:50px;
 }
 #liveContainer a, #geoContainer a{
-    /*width:100%;*/
+    width:100%;
     padding:10px;
     text-decoration: none;
 
 }
 #liveContainer a:hover, #geoContainer a:hover{
     color:white;
-    background:#333;
+    background: #000000;
 }
 
 /*BUBBLE CSS*/
-/*.hide{
-    display: none;
-}
-.show{
-    display:inline;
-}*/
 .liveBubble {
-    background-color: #aaa;
-    border: 1px solid #c8c8c8;
     width:170px;
     text-align: center;
     position: absolute;
@@ -193,7 +179,9 @@ html, body {
     width: 150px;
 }
 .liveBubble ul li a{
-    border: 1px solid #c8c8c8;
+    color:white;
+    background:rgba(27, 27, 27, 0.9);
+    border: 1px solid black;
     margin-top:0px;
 }
 .liveBubble .arrow {
@@ -202,7 +190,7 @@ html, body {
 }
  
 .bottom {
-    border-color: #aaa transparent transparent transparent;
+    border-color: rgba(27, 27, 27, 0.9) transparent transparent transparent;
     border-width: 8px 8px 0px 8px;
     bottom: -8px;
     left:70px;
